After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 152636 - Incorrect number of displayed digits with zoom != 100%
Incorrect number of displayed digits with zoom != 100%
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: General
git master
Other Linux
: Normal normal
: ---
Assigned To: Jody Goldberg
Jody Goldberg
Depends on:
Blocks:
 
 
Reported: 2004-09-14 17:25 UTC by Emmanuel Pacaud
Modified: 2004-12-22 21:47 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Emmanuel Pacaud 2004-09-14 17:25:23 UTC
- Enter 1/3 in a cell.
- Set zoom to 200%.

-> Displayed number doesn't take all available space.

- Set zoom to 50%.

-> Gnumeric displays #####.

It seems number of displayed digit calculation use the same length for all zoom
settings.
Comment 1 Jody Goldberg 2004-09-16 14:48:30 UTC
Fixed this yesterday.