src/sheet.c
@@ -438,6 +438,7 @@ static void
 cb_clear_rendered_cells (gpointer ignored, GnmCell *cell)
 {
 	if (cell->rendered_value != NULL) {
+		cell->row_info->needs_respan = TRUE;
 		rendered_value_destroy (cell->rendered_value);
 		cell->rendered_value = NULL;
 	}
